Horizontal Scroll Bar fixed. White space is still a potential show for mobile.

--- a/style.css
+++ b/style.css
@@ -171,6 +171,7 @@ p{
   position: absolute;
   background: #1f2123;
   vertical-align: bottom;
+  width: 99vw;
 }
 
 #navbar {
